...

            <Pressable
              accessibilityLabel="close editor settings"
              accessibilityRole="button"
              accessible
              onPress={() => router.back()}
              testID="editor-settings-done-button">
              {({ pressed }) => (
                <View
                  style={[
                    styles.actionButton,
                    {
                      backgroundColor: palette.chip,
...
