appId: com.avelts.lain
tags:
  - smoke
  - p0
---
- launchApp:
    clearState: true
- assertVisible:
    id: scene-version-label
- tapOn:
    id: scene-reload-button
- extendedWaitUntil:
    visible:
      id: scene-preview-awp-status-loading
    timeout: 10000
- extendedWaitUntil:
    visible:
      id: scene-preview-awp-status-ready
    timeout: 15000
